--- a/oopRestaurant/bin/oopRestaurant.dll.config
+++ b/oopRestaurant/bin/oopRestaurant.dll.config
@@ -9,8 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\DEVELOPER;AttachDbFilename=|DataDirectory|\aspnet-oopRestaurant-20171013015541.mdf;Initial Catalog=aspnet-oopRestaurant-20171013015541;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection"
+         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-OopRestaurant201710-20171010011037.mdf;Initial Catalog=aspnet-OopRestaurant201710-20171010011037;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
